Update supervisord. Actually use channels in github service.

--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -43,7 +43,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ; supervisor.
 
 [program:bots]
-command=/usr/bin/env python -m frontend.bots
+command=/usr/bin/env python -m notifico.bots
 
 ;[program:theprogramname]
 ;command=/bin/cat              ; the program (relative uses PATH, can take args)
