--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -51,6 +51,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:bots]
 command=/usr/bin/env python -m notifico.bots
+stopsignal=KILL
 
 ;[program:theprogramname]
 ;command=/bin/cat              ; the program (relative uses PATH, can take args)
