Split the bots in preperation for subtree splice

--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -50,7 +50,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ; supervisor.
 
 [program:bots]
-command=/usr/bin/env python -m notifico.bots
+command=/usr/bin/env python -m botifico
 stopsignal=KILL
 
 ;[program:theprogramname]
