Update supervisord config

--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -50,8 +50,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ; supervisor.
 
 [program:bots]
-command=/usr/bin/env python -m botifico
-stopsignal=QUIT
+command=/usr/bin/env python notifico/botifico
 
 ;[program:theprogramname]
 ;command=/bin/cat              ; the program (relative uses PATH, can take args)
