Add missing dependencies to setup.py, add bootstrap script for supervisord, update supervisord config, use virtualenv for deployment and other backports from redo

--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -50,7 +50,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ; supervisor.
 
 [program:bots]
-command=/usr/bin/env python notifico/botifico
+command=bash run_bots.sh
 
 ;[program:theprogramname]
 ;command=/bin/cat              ; the program (relative uses PATH, can take args)
