Add stderr_logfile directive to supervisord config

--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -41,3 +41,4 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 command=ENV/bin/python -m notifico.bots
 autorestart=true
 stdout_logfile=botifico.log
+stderr_logfile=botifico_errors.log
