Update my personal deploy scripts

--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -38,7 +38,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;history_file=~/.sc_history  ; use readline history if available
 
 [program:bots]
-command=ENV/bin/python -m notifico.bots
+command=python -m notifico.bots
 autorestart=true
 stdout_logfile=botifico.log
 stderr_logfile=botifico_errors.log
