--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -25,7 +25,12 @@ stdout_logfile=botifico.log
 stderr_logfile=botifico_errors.log
 
 [program:notifico-www]
-command=/home/notifico/.local/bin/gunicorn -w 4 -b 127.0.0.1:4000 "notifico:create_instance()"
+command=%(ENV_HOME)s/.local/bin/gunicorn -w 4 -b 127.0.0.1:4000 "notifico:create_instance()"
 process_name=%(program_name)s
 user=notifico
+autorestart=true
+
+[program:notifico-worker]
+directory=%(ENV_HOME)s/notifico
+command=python -m notifico.worker worker -l info
 autorestart=true
