Log stdout and stderr from the worker master.

--- a/misc/deploy/supervisord.conf
+++ b/misc/deploy/supervisord.conf
@@ -34,3 +34,5 @@ autorestart=true
 directory=%(ENV_HOME)s/notifico
 command=python -m notifico.worker worker -l info
 autorestart=true
+stdout_logfile=worker.log
+stderr_logfile=worker_errors.log
