--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ pip-log.txt
 .coverage
 .tox
 nosetests.xml
+.pytest_cache/
 
 # Translations
 *.mo
@@ -59,3 +60,4 @@ nosetests.xml
 # Project-specific
 testing.db
 local_config.py
+notifico-env
