--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 2.7
       uses: actions/setup-python@v1
       with:
         python-version: 2.7
@@ -17,7 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-        pip install -e .[extra]
+        pip install -e ".[tests]"
     - name: Test with pytest
       run: |
         pytest
