--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ click = "^8.1.3"
 requests = "^2.27.1"
 email-validator = "^1.2.1"
 Flask-Migrate = "^3.1.0"
+pydantic = "^1.9.0"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
