--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ email-validator = "^1.2.1"
 Flask-Migrate = "^3.1.0"
 pydantic = "^1.9.0"
 python-dotenv = "^0.20.0"
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
