--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ Flask-Migrate = "^3.1.0"
 pydantic = "^1.9.0"
 python-dotenv = "^0.20.0"
 psycopg2 = "^2.9.3"
+rich = "^12.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
