--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,15 @@ pytest = "^7.1.2"
 [tool.poetry.scripts]
 notifico = "notifico.cli:cli"
 
+[tool.poetry.plugins."notifico.plugins.service"]
+"appveyor" = "notifico.contrib.services.appveyor:AppVeyorHook"
+"github" = "notifico.contrib.services.github:GithubHook"
+"gitlab" = "notifico.contrib.services.gitlab:GitlabHook"
+"jenkins" = "notifico.contrib.services.jenkins:JenkinsHook"
+"jira" = "notifico.contrib.services.jira:JIRAHook"
+"plain" = "notifico.contrib.services.plain:PlainTextHook"
+"travisci" = "notifico.contrib.services.travisci:TravisHook"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
