--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,11 +13,13 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 2.7
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
-        pip install -e ".[tests]"
+        python -m pip install poetry
+        poetry install
+
     - name: Test with pytest
       run: |
         pytest
