--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "notifico"
 version = "1.0.0"
-description = ""
+description = "A service-to-IRC relay."
 authors = ["Tyler Kennedy <tk@tkte.ch>"]
 license = "MIT"
 
@@ -32,6 +32,11 @@ psycopg2 = "^2.9.3"
 rich = "^12.5.1"
 gevent = "^21.12.0"
 utopia = { git = "https://github.com/TkTech/utopia.git", rev = "70293ed5" }
+
+pytest = { version = "^7.1.3", optional = true }
+
+[tool.poetry.extras]
+tests = ["pytest"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
