The start of completely new IRC bots built on asyncio.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - db
     environment:
       NOTIFICO_DB: postgresql://postgres:notifico@db/postgres
-      NOTIFICO_REDIS_HOST: "redis"
+      NOTIFICO_REDIS: "redis://redis/0"
     command: poetry run notifico bots start
 
   frontend:
@@ -38,8 +38,8 @@ services:
     environment:
       FLASK_DEBUG: 1
       NOTIFICO_DB: postgresql://postgres:notifico@db/postgres
+      NOTIFICO_REDIS: "redis://redis/0"
       FLASK_APP: "notifico:create_app"
-      NOTIFICO_REDIS_HOST: "redis"
     command: poetry run notifico run --host 0.0.0.0
 
 volumes:
