--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,6 @@
 name: Run all tests
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -9,10 +9,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 2.7
-      uses: actions/setup-python@v1
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        python-version: 2.7
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
