--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ rich = "^12.5.1"
 gevent = "^21.12.0"
 
 pytest = { version = "^7.1.3", optional = true }
+sentry-sdk = "^1.9.9"
 
 [tool.poetry.extras]
 tests = ["pytest"]
