--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ python = "^3.10"
 Flask = "^2.1.2"
 Flask-WTF = "^1.0.1"
 Flask-Gravatar = "^0.5.0"
-Flask-SQLAlchemy = "^2.5.1"
 Flask-XML-RPC = "^0.1.2"
 Flask-Mail = "^0.9.1"
 Flask-Caching = "^1.10.1"
@@ -34,6 +33,7 @@ gevent = "^21.12.0"
 
 pytest = { version = "^7.1.3", optional = true }
 sentry-sdk = "^1.9.9"
+Flask-RESTful = "^0.3.9"
 
 [tool.poetry.extras]
 tests = ["pytest"]
