--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,18 @@ services:
       REDIS_URL: "redis://redis/0"
     command: poetry run notifico bots start
 
+  workers:
+    build: .
+    volumes:
+      - .:/code
+    depends_on:
+      - redis
+      - db
+    environment:
+      DATABASE_URL: postgresql://postgres:notifico@db/postgres
+      REDIS_URL: "redis://redis/0"
+    command: poetry run celery -A notifico.worker worker
+
   frontend:
     build: .
     ports:
