--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,6 @@ python-dotenv = "^0.20.0"
 psycopg2 = "^2.9.3"
 rich = "^12.5.1"
 gevent = "^21.12.0"
-
 pytest = { version = "^7.1.3", optional = true }
 sentry-sdk = "^1.9.9"
 Flask-RESTful = "^0.3.9"
@@ -61,3 +60,16 @@ notifico = "notifico.cli:cli"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 80
+target-version = ['py310']
+extend-exclude = '''
+(
+    \.venv/
+    |\.local/
+    |\.cache/
+    |\.git/
+    |.+/migrations
+)
+'''
