Fix a bug where if no logging channel was setup, a new detatched ChatLog would be created for each and every message (whoops!)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ tests = ["pytest"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
+black = "^23.3.0"
 
 [tool.poetry.scripts]
 notifico = "notifico.cli:cli"
