--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ Flask-Mail = "^0.9.1"
 Flask-Caching = "^1.10.1"
 SQLAlchemy = "^1.4.36"
 redis = "^4.3.4"
-gunicorn = "^20.1.0"
+gunicorn = "^23.0.0"
 Unidecode = "^1.3.4"
 raven = "^6.10.0"
 blinker = "^1.4"
@@ -29,7 +29,7 @@ pydantic = "^1.9.0"
 python-dotenv = "^0.20.0"
 psycopg2 = "^2.9.3"
 rich = "^12.5.1"
-gevent = "^21.12.0"
+gevent = "24.11.1"
 pytest = { version = "^7.1.3", optional = true }
 sentry-sdk = "^1.9.9"
 Flask-RESTful = "^0.3.9"
